SystemUI: Add roaming indicator to statusbar tuner
Dhina17: Ported to 14

Change-Id: I326e1d54019179f0505a558b7e57ab6a2479cdf2
Co-authored-by: Dhina17 <dhinalogu@gmail.com>
Signed-off-by: Mohammad Hasan Keramat J <ikeramat@protonmail.com>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: Aston-Martinn <advaithbhat9@gmail.com>

--- a/packages/SystemUI/res/values/tenx_strings.xml
+++ b/packages/SystemUI/res/values/tenx_strings.xml
@@ -201,4 +201,7 @@
     <!-- Screen record -->
     <string name="screenrecord_keep_screen_awake_label">Stay awake</string>
     <string name="screenrecord_keep_screen_awake_summary">Keep the screen on</string>
+
+    <!-- Name of the roaming status bar icon. -->
+    <string name="status_bar_roaming">Roaming indicator</string>
 </resources>
