--- a/packages/SystemUI/res/values/tenx_config.xml
+++ b/packages/SystemUI/res/values/tenx_config.xml
@@ -56,4 +56,7 @@
 
     <!-- Preferred max refresh rate at AOD & Ambient Display, if supported by the display. -->
     <integer name="config_aodMaxRefreshRate">-1</integer>
+
+    <!-- Whether to enable edge light only when the device face down -->
+    <bool name="config_showEdgeLightOnlyWhenFaceDown">false</bool>
 </resources>
