SystemUI: Forward port 'HD & wifi calling statusbar icons'
Squashed:
* SystemUI: Fix HD calling icon for RTL layout
* SystemUI: sb: Fix VoWifi icon size
* SystemUI: sb: Hide wifi airplane spacer when vowifi is available
* SignalDrawable: Add support for Cut + Roaming back

Adithya R <gh0strider.2k18.reborn@gmail.com>:
    HD icon shows for VoLTE/VoNR, and wifi calling for VoWiFi.
    Based on CLO's volte/vowifi icon implementation, reworked manually.
    Drawables taken from Nothing OS and manually tweaked.

Dhina17 <dhinalogu@gmail.com>:
    Rewrite it for new status bar impl in Android 14.
    Move VoWifi icon to Wifi space.
    New VoWifi icon with SIM identification.

Signed-off-by: Mohammad Hasan Keramat J <ikeramat@protonmail.com>
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Co-authored-by: Weijie Wang <quic_weijiew@quicinc.com>
Co-authored-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Co-authored-by: electimon <electimon@gmail.com>
Co-authored-by: nift4 <nift4@protonmail.com>
Original-Change-Id: I0190394690e9b38e0575ffb099be8a5ed2ae9d90
Change-Id: Ib48b1295d060acf462b2f91e81cbb570fd8df42e
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: Aston-Martinn <advaithbhat9@gmail.com>

--- a/packages/SystemUI/res/values/tenx_dimens.xml
+++ b/packages/SystemUI/res/values/tenx_dimens.xml
@@ -119,4 +119,7 @@
     <dimen name="keyguard_charging_indication_height">60dp</dimen>
     <dimen name="keyguard_charging_indication_width">32dp</dimen>
     <dimen name="keyguard_charging_indication_margin_bottom">70dp</dimen>
+
+    <!-- HD calling icon -->
+    <dimen name="signal_icon_viewport_size">24dp</dimen>
 </resources>
