SystemUI: Status bar chip bg styles [1/2]
*TenX- Drop gradient sharp and add accurate shade

Co-authored-by: Ghosuto <clash.raja10@gmail.com>
Signed-off-by: minaripenguin <minaripenguin@users.noreply.github.com>
Signed-off-by: Aston-Martinn <advaithbhat9@gmail.com>

--- a/packages/SystemUI/res/values/tenx_colors.xml
+++ b/packages/SystemUI/res/values/tenx_colors.xml
@@ -29,4 +29,16 @@
     <!-- monet accurate shade -->
     <color name="monet_accurate_shade_overlay">?attr/shadeActive</color>
     <color name="monet_accurate_shade_system">@android:color/system_accent1_500</color>
+
+    <!-- Statusbar clock chip -->
+    <color name="colorAccent">@android:color/system_accent1_600</color>
+    <color name="colorAccentVariant">@android:color/system_accent3_600</color>
+    <color name="rippleAccent">@color/color_container_overlay_light</color>
+    <color name="rippleDark">#1A000000</color>
+    <color name="rippleDarker">#33000000</color>
+    <color name="colorBackground">@android:color/system_neutral2_50</color>
+    <color name="colorContainer">@android:color/system_neutral2_50</color>
+    <color name="shadow">#14000000</color>
+    <color name="neumorph_outline_start">#FFBDBDBD</color>
+    <color name="neumorph_outline_end">#FFF0F0F0</color>
 </resources>
