SystemUI: Add settings for pulse light face down [1/2]
Change-Id: I185d828abe000bcf9d4ce3a0b79b35c7726f9d69
Signed-off-by: Aston-Martinn <advaithbhat9@gmail.com>

--- a/core/res/res/values/tenx_config.xml
+++ b/core/res/res/values/tenx_config.xml
@@ -149,4 +149,7 @@
   <!-- List of system apps that are allowed to be locked with app lock.
         Use with extreme caution. -->
   <string-array name="config_appLockAllowedSystemApps" translatable="false" />
+
+  <!-- Whether to show edge light only when the device is face down by default -->
+  <bool name="config_edgeLightFaceDownEnabledByDefault">false</bool>
 </resources>
