--- a/core/res/res/values/tenx_symbols.xml
+++ b/core/res/res/values/tenx_symbols.xml
@@ -120,4 +120,7 @@
     <java-symbol type="id" name="aerr_copy" />
     <java-symbol type="string" name="url_copy_success" />
     <java-symbol type="string" name="url_copy_failed" />
+
+    <!-- Whether to show edge light only when the device is face down by default -->
+    <java-symbol type="bool" name="config_edgeLightFaceDownEnabledByDefault" />
 </resources>
