--- a/packages/SystemUI/res/values-night/tenx_colors.xml
+++ b/packages/SystemUI/res/values-night/tenx_colors.xml
@@ -29,4 +29,8 @@
     <!-- monet accurate shade -->
     <color name="monet_accurate_shade_overlay">?attr/shadeActive</color>
     <color name="monet_accurate_shade_system">@android:color/system_accent1_500</color>
+
+    <!-- Face unlock indication -->
+    <color name="faceid_title_color">@android:color/system_neutral1_10</color>
+    <color name="faceid_background_color">@android:color/system_neutral1_1000</color>
 </resources>
