--- a/packages/SystemUI/res/values/tenx_colors.xml
+++ b/packages/SystemUI/res/values/tenx_colors.xml
@@ -41,4 +41,8 @@
     <color name="shadow">#14000000</color>
     <color name="neumorph_outline_start">#FFBDBDBD</color>
     <color name="neumorph_outline_end">#FFF0F0F0</color>
+
+    <!-- face unlock indication -->
+    <color name="faceid_title_color">@android:color/system_neutral1_800</color>
+    <color name="faceid_background_color">@android:color/system_neutral1_10</color>
 </resources>
