--- a/packages/SystemUI/res/values/tenx_dimens.xml
+++ b/packages/SystemUI/res/values/tenx_dimens.xml
@@ -16,6 +16,15 @@
 -->
 <resources>
 
+    <!-- Face unlock indicator -->
+    <dimen name="face_unlock_indicator_padding_vertical">12dp</dimen>
+    <dimen name="face_unlock_indicator_padding_start">12dp</dimen>
+    <dimen name="face_unlock_indicator_padding_end">22dp</dimen>
+    <dimen name="face_unlock_indicator_min_width">0dp</dimen>
+    <dimen name="face_unlock_indicator_text_size">13sp</dimen>
+    <dimen name="face_unlock_indicator_icon_size">18dp</dimen>
+    <dimen name="face_unlock_indicator_icon_padding">9dp</dimen>
+
     <!-- The height of the WiFi toggle layout in Internet panel -->
     <dimen name="internet_dialog_wifi_toggle_height">56dp</dimen>
 
