--- a/packages/SystemUI/res/values/tenx_styles.xml
+++ b/packages/SystemUI/res/values/tenx_styles.xml
@@ -36,4 +36,13 @@
     <style name="qs_theme" parent="Theme.SystemUI.QuickSettings">
         <item name="android:windowIsFloating">true</item>
     </style>
+
+    <style name="Theme.FaceID.SystemUI" parent="@style/Theme.MaterialComponents.DayNight">
+        <item name="android:fontFamily">@*android:string/config_bodyFontFamily</item>
+    </style>
+
+    <style name="isFaceIDBackgroundOverlay" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">48dp</item>
+    </style>
 </resources>
